# simulation-pipeline

./: .gitignore  .~lock.history-1893666.dat#  .~lock.history-1893666_processed.csv#  README.md  config.py  countprob.dat.save  exoplanets.txt  hisparsing.py  histarchive.py  history.py  historyold.py  multisnap.py  requirements.txt  sanitization.py  scatter_plot.html  utils.py
functions/: __init__.py  bhinfrad.py  blue_straggler.py  calculate_core_radius.py  calculate_half_mass_radius.py  decode_history.py  filenames  get_cumulative_counts.py  get_luminosity.py  history.py  historyplots.py  plot_3d_positions.py  plot_boxplot.py  plot_cumulative_counts_vs_r.py  plot_cumulative_number_vs_stellar_types.py  plot_distribution_of_masses.py  plot_event_frequencies.py  plot_heatmap.py  plot_histogram.py  plot_pairplot.py  plot_position_vs_stellar_type.py  plot_scatter.py  plot_scatter_3d.py  plot_violin.py  plothr.py  suggest_visualizations.py
main/: main.py
tsunami-master/: .gitattributes  .gitignore  CMakeLists.txt  README.md  tsunami.doxygen
tsunami-master/bench/: bench.binarypn.sh  bench.cluster.sh  bench.sh  bench.solar.sh
tsunami-master/bench/lib/: benchfunc.sh
tsunami-master/cmake/: python.cmake
tsunami-master/input/: tsunami_parameters.txt
tsunami-master/lib/: DOP853.hpp  IO.h  Nbodyalgorithms.hpp  bulirsch.hpp  chain.hpp  classification.h  config.hpp  custom_types.hpp  debuglog.h  errhand.hpp  keplerutils.h  kozailidov.h  leapfrog_stepped.hpp  simprof.hpp  stopcond.h  strings_definitions.hpp  tsunami.hpp
tsunami-master/src/: IO.cpp  classification.cpp  keplerutils.cpp  kozailidov.cpp  stopcond.cpp
tsunami-master/src/python/: binbin.py  binsingle_custom_ics_example.py  binsingle_evolve_system.py  binsingle_initial_conditions.py  binsingle_plots.py  binsingle_run.py  binsingle_txt_to_h5.py  bsmbh_scatter.py  equilibrium_tide_averaged.py  run_forced_timesteps.py  run_planetary_system.py  stopcond_test.py  test_figure8.py  test_mergers_collisions.py  test_okinami.py  test_pn_orbital_elements.py  test_pns.py  test_restart.py  test_tdetracker.py  test_tides.py  test_tsunami.py  test_waveform.py  triple_generator_common.py  triple_generator_mixed.py  triple_generator_nbody.py  triple_generator_secular.py  tsunami_submitter.py  tsunami_utils.py  validate_dyntides.py
tsunami-master/swig/: okinami.i  pyfragments.swg  tsunami4py.i
tsunami-master/tests/tsunami/: main.cpp
